# vedis

./: CMakeLists.txt  Dockerfile  Mayhemfile
fuzz/: CMakeLists.txt  fuzz.c
fuzz/corpus/: hello-seed  mget  mset
